[package]
name = "jsplay"
version = "0.1.0"
edition = "2021"
authors = ["hjylxmhzq <>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rquickjs = { version = "0.1.7", features = ["loader", "dyn-load"] }
rustyline = "11.0.0"
